--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -14,6 +14,10 @@
   @apply font-medium;
 }
 
+body {
+  @apply bg-gray-50;
+}
+
 input {
   &[type='number'] {
     -moz-appearance: textfield;
@@ -31,10 +35,20 @@ input {
   }
 }
 
-button, a {
-  outline: 1px;
-  &:hover {
-    transition: ease;
-    transition-duration: 300ms;
-  }
+button, a, input {
+  @apply duration-150;
+  @apply hover:duration-300;
+  @apply transition-all;
+}
+
+h1 {
+  @apply text-2xl;
+}
+
+h2 {
+  @apply text-xl;
+}
+
+h3 {
+  @apply text-lg;
 }
