--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -43,13 +43,17 @@ button, a, input {
 }
 
 h1 {
-  @apply text-2xl;
+  @apply text-4xl;
 }
 
 h2 {
-  @apply text-xl;
+  @apply text-3xl;
 }
 
 h3 {
-  @apply text-lg;
+  @apply text-2xl;
+}
+
+h4 {
+  @apply text-xl;
 }
