--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -64,9 +64,7 @@
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
   }
-}
 
-@layer base {
   * {
     @apply border-border;
     min-width: 0;
@@ -82,4 +80,11 @@
     height: inherit;
     width: inherit;
   }
+
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
 }
