--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -28,6 +28,12 @@
     --destructive: hsl(0 84.2% 60.2%);
     --destructive-foreground: hsl(210 40% 98%);
 
+    --success: hsl(161, 94%, 30%);
+    --success-foreground: hsl(210 40% 98%);
+
+    --pending: hsl(200, 98%, 39%);
+    --pending-foreground: hsl(210 40% 98%);
+
     --border: hsl(214.3 31.8% 91.4%);
     --input: hsl(214.3 31.8% 91.4%);
     --ring: hsl(222.2 84% 4.9%);
